# daedalus

./: .gitignore  Cargo.toml  SPEC.md
crates/daedalus-api/: Cargo.toml
crates/daedalus-api/src/: lib.rs
crates/daedalus-cli/: Cargo.toml
crates/daedalus-cli/src/: main.rs
crates/daedalus-client/: Cargo.toml
crates/daedalus-client/src/: lib.rs
crates/daedalus-config/: Cargo.toml
crates/daedalus-config/src/: lib.rs
crates/daedalus-core/: Cargo.toml
crates/daedalus-core/src/: lib.rs
crates/daedalus-daemon/: Cargo.toml
crates/daedalus-daemon/src/: main.rs
crates/daedalus-db/: Cargo.toml
crates/daedalus-db/src/: lib.rs
crates/daedalus-domain/: Cargo.toml
crates/daedalus-domain/src/: lib.rs
crates/daedalus-downloads/: Cargo.toml
crates/daedalus-downloads/src/: lib.rs
crates/daedalus-gui/: Cargo.toml
crates/daedalus-gui/src/: main.rs
crates/daedalus-service/: Cargo.toml
crates/daedalus-service/src/: lib.rs
crates/daedalus-sources/: Cargo.toml
crates/daedalus-sources/src/: lib.rs
