[package]
name = "daedalus-api"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
async-stream.workspace = true
axum.workspace = true
daedalus-config = { path = "../daedalus-config" }
daedalus-core = { path = "../daedalus-core" }
daedalus-domain = { path = "../daedalus-domain" }
daedalus-service = { path = "../daedalus-service" }
futures-core.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
