[package]
name = "daedalus-client"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
daedalus-core = { path = "../daedalus-core" }
daedalus-config = { path = "../daedalus-config" }
daedalus-domain = { path = "../daedalus-domain" }
reqwest.workspace = true
serde.workspace = true
