[package]
name = "daedalus-config"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
daedalus-core = { path = "../daedalus-core" }
daedalus-domain = { path = "../daedalus-domain" }
directories.workspace = true
serde.workspace = true
shellexpand.workspace = true
thiserror.workspace = true
toml.workspace = true
