[package]
name = "daedalus-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
axum.workspace = true
daedalus-api = { path = "../daedalus-api" }
daedalus-service = { path = "../daedalus-service" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
