[package]
name = "daedalus-gui"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
daedalus-client = { path = "../daedalus-client" }
daedalus-config = { path = "../daedalus-config" }
daedalus-core = { path = "../daedalus-core" }
daedalus-domain = { path = "../daedalus-domain" }
daedalus-service = { path = "../daedalus-service" }
egui.workspace = true
eframe = { workspace = true, optional = true }

[features]
default = []
desktop = ["dep:eframe"]
